[package]
name = "psp34"
version = "0.3.0"
edition = "2021"
authors = ["Cardinal"]
homepage = "https://github.com/Cardinal-Cryptography/PSP34"
repository = "https://github.com/Cardinal-Cryptography/PSP34"
license = "Apache-2.0"
readme = "README.md"
description = "Minimal implementation of PSP34 token standard in pure ink!"
exclude = [ ".github/*" ]
keywords = ["smart-contract", "token", "PSP34", "ink"]
categories = ["cryptography::cryptocurrencies", "wasm"]

[dependencies]
ink = { version = "5.0.0", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]

enumerable = []
ink-as-dependency = []